--- a/src/index.css
+++ b/src/index.css
@@ -21,34 +21,44 @@ body {
   font-weight: bold;
   text-align: center;
   text-decoration: none;
-  color: #fff;
+  color: #a4fbff;
   background-color: #3498db;
   border: 2px solid #2980b9;
   border-radius: 8px;
+  -webkit-text-stroke: 1px #005049;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  transition: transform 0.2s, box-shadow 0.2s;
+  transition: transform 0.2s, box-shadow 0.2s, color 0.2s;
   margin-bottom: 20px;
 }
 
 #boton-3d:hover {
-  transform: translateY(-2px);
-  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
+  transform: scale(1.1);
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+  color: #b94848;
 }
 
 h1 {
-  font-size: 5rem;
-  align-items: center;
-  font-family: "Cursive", sans-serif;
-  color: #db3434;
-  animation: moveText 2s infinite;
+  font-size: 6rem;
+  font-weight: bold;
+  font-family: "Cursive";
+  color: #3c1713;
+  text-shadow: 0px 28px 9px rgba(239, 71, 111, 0.5);
+  -webkit-text-stroke: 1px #202121;
+  animation: moveText 3s infinite;
+  background: linear-gradient(to right, #a0a0a0, #df5336);
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
 }
 
 p {
-  font-size: 50px;
-  font-family: sans-serif;
-  background-color: rgb(54, 100, 100);
+  font-size: 80px;
+  color: #f2f2f2b6;
+  font-family: serif;
+  background-color: transparent;
   border-radius: 20px;
   text-align: center;
+  backdrop-filter: blur(3px);
+  -webkit-text-stroke: 2px #000;
 }
 
 @keyframes moveText {
@@ -68,4 +78,8 @@ p {
   display: flex;
   text-align: center;
   flex-direction: column;
+}
+
+footer {
+  color: rgb(240 248 255);
 }
